fix: Adjust table cell width for better alignment in components CSS

--- a/new_website/css/components.css
+++ b/new_website/css/components.css
@@ -585,7 +585,7 @@ td strong {
     user-select: none;
     display: inline-block;
     text-align: right;
-    min-width: 4.5em;
+    width: 5.5em;
     padding: 0 0.8em 0 0;
     margin-right: 1em;
     border-right: 1px solid rgba(255, 255, 255, 0.12);
